devhub-tools/main/default/objects/DocGen_Community_Post__c/DocGen_Community_Post__c.object-meta.xml
<CustomObject>
    <description>Community forum post — discussions, questions, testimonials, feature requests, and shared templates.</description>
    <label>Community Post</label>
    <nameField>
        <displayFormat>POST-{00000}</displayFormat>
        <label>Post Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>