devhub-tools/main/default/objects/DocGen_Community_Post__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Posts</relationshipLabel>
    <relationshipName>Community_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>