devhub-tools/main/default/objects/DocGen_Community_Post__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Community Posts</relationshipLabel>
    <relationshipName>Community_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>