devhub-tools/main/default/objects/DocGen_Community_Post__c/fields/Author_Company__c.field-meta.xml
<CustomField>
    <fullName>Author_Company__c</fullName>
    <description>Denormalized author company for guest user rendering. Set on post creation.</description>
    <label>Author Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>