devhub-tools/main/default/objects/DocGen_Community_Post__c/fields/Author_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Display_Name__c</fullName>
    <description>Denormalized author name for guest user rendering. Set on post creation.</description>
    <label>Author Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>