devhub-tools/main/default/objects/DocGen_Community_Post__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Discussion</fullName><default>true</default><label>Discussion</label></value>
            <value><fullName>Question</fullName><default>false</default><label>Question</label></value>
            <value><fullName>Testimonial</fullName><default>false</default><label>Testimonial</label></value>
            <value><fullName>Feature Request</fullName><default>false</default><label>Feature Request</label></value>
            <value><fullName>Show and Tell</fullName><default>false</default><label>Show and Tell</label></value>
            <value><fullName>Template Share</fullName><default>false</default><label>Template Share</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>