devhub-tools/main/default/objects/DocGen_Community_Post__c/fields/Is_Answered__c.field-meta.xml
<CustomField>
    <fullName>Is_Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Answered</label>
    <type>Checkbox</type>
</CustomField>