devhub-tools/main/default/objects/DocGen_Community_Post__c/fields/Is_Pinned__c.field-meta.xml
<CustomField>
    <fullName>Is_Pinned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pinned</label>
    <type>Checkbox</type>
</CustomField>