devhub-tools/main/default/objects/DocGen_Community_Post__c/fields/Reply_Count__c.field-meta.xml
<CustomField>
    <fullName>Reply_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Replies</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>