devhub-tools/main/default/objects/DocGen_Community_Post__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value>
            <value><fullName>Archived</fullName><default>false</default><label>Archived</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>