devhub-tools/main/default/objects/DocGen_Community_Post__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <description>Comma-separated topic tags for this post (e.g. PDF, Bulk Generation, Flow)</description>
    <label>Topics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>