devhub-tools/main/default/objects/DocGen_Community_Post__c/fields/View_Count__c.field-meta.xml
<CustomField>
    <fullName>View_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Views</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>